Make sure that GetFrameForPoint checks all layers of each float before moving on to the next one.  Bug 253572, r+sr=roc