layout/generic/nsBlockFrame.cpp
@@ -5910,24 +5910,11 @@ nsBlockFrame::GetFrameForPoint(nsPresContext* aPresContext,
 
         rv = GetFrameForPointUsing(aPresContext, aPoint,
                                    nsLayoutAtoms::floatList,
-                                   NS_FRAME_PAINT_LAYER_FOREGROUND,
+                                   NS_FRAME_PAINT_LAYER_ALL,
                                    PR_FALSE, aFrame);
         if (NS_OK == rv) {
           return NS_OK;
         }
-
-        rv = GetFrameForPointUsing(aPresContext, aPoint,
-                                   nsLayoutAtoms::floatList,
-                                   NS_FRAME_PAINT_LAYER_FLOATS,
-                                   PR_FALSE, aFrame);
-        if (NS_OK == rv) {
-          return NS_OK;
-        }
-
-        return GetFrameForPointUsing(aPresContext, aPoint,
-                                     nsLayoutAtoms::floatList,
-                                     NS_FRAME_PAINT_LAYER_BACKGROUND,
-                                     PR_FALSE, aFrame);
 
       } else {
         return NS_ERROR_FAILURE;
